xedoc-rs/tui/src/status/snapshots/xedoc_tui__status__tests__token_optimizer_stats_line_snapshot.snap
---
source: tui/src/status/tests.rs
expression: "Token optimizer stats: 3 reductions, ~120 tokens saved (lifetime within retention)."
---
Token optimizer stats: 3 reductions, ~120 tokens saved (lifetime within retention).
